cabal-version: 1.12

name:           cryptopals
version:        0.0.1.0
description:    Please see the README on GitHub at <https://github.com/CMoncur/cryptopals-challenges-in-haskell#readme>
homepage:       https://github.com/CMoncur/cryptopals-challenges-in-haskell#readme
bug-reports:    https://github.com/CMoncur/cryptopals-challenges-in-haskell/issues
author:         Cody Moncur
maintainer:     cmoncur@gmail.com
copyright:      2020 Cody Moncur
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/CMoncur/cryptopals-challenges-in-haskell

library
  exposed-modules:
      HexToBase64
  other-modules:
      Paths_cryptopals
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , base64-bytestring
    , bytestring
    , hexstring
  default-language: Haskell2010

test-suite cryptopals-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_cryptopals
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , cryptopals
    , hspec
    , utf8-string
  default-language: Haskell2010
